examples/errors/check_for_cond.bio
def onSTART()
   FOR
   (
      ASSIGN_LOCAL(i, 0),
      CALL
      (
         IF
         (
            NOT(IS_INT(i)),
            CALL
            (
               PRINT("variable i isn't int\n"),
               BREAK()
            )
         ),
         LS(i, 100)
      ),
      PRINT(i, "\n"),
      CALL
      (
         INC(i),
         IF
         (
            EQ(i, 10),
            ASSIGN_LOCAL(i, true)
         )
      )
   )
end
